# ciphra.pay

aztec-contracts/: Nargo.toml  README.md  package.json  tsconfig.json
aztec-contracts/config/: config.ts  testnet.json
aztec-contracts/scripts/: deploy_contract.js  deploy_testnet.js
backend/: .env.example  README.md  package.json  pnpm-lock.yaml
backend/src/: app.module.ts
contract/: Scarb.toml  package-lock.json  package.json  tsconfig.json
contract/near-contract/: Cargo.toml  build.sh  deploy.sh
contract/near-contract/deployment/testnet/: escrow_contract_address.txt  oracle_account_address.txt  p2p_contract_address.txt  swap_contract_address.txt
contract/near-contract/escrow-contract/: Cargo.toml
contract/near-contract/escrow-contract/src/: lib.rs
contract/near-contract/p2p-transfer/: Cargo.toml
contract/near-contract/p2p-transfer/src/: lib.rs
contract/near-contract/scripts/: deploy.ts  test.ts
contract/near-contract/swap-contract/: Cargo.toml
contract/near-contract/swap-contract/src/: lib.rs
contract/near-contract/tests/common/: mod.rs
everything_about_project/: backend.md  contracts_allchains.md  main.md
near-contract/: .gitignore  Cargo.toml  build.sh  deploy.sh
near-contract/escrow-contract/: Cargo.toml
near-contract/escrow-contract/src/: lib.rs
near-contract/escrow-contract/tests/: integration_tests.rs
near-contract/scripts/: interact.sh
near-contract/swap-contract/: Cargo.toml
near-contract/swap-contract/src/: lib.rs
near-contract/swap-contract/tests/: integration_tests.rs
near-contract/tests/: simulation_tests.rs
(+64 files in other folders)
