[workspace]
members = [
    "swap-contract",
    "escrow-contract"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ciphra.pay Team"]

[workspace.dependencies]
near-sdk = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true