[workspace]
members = [
    "swap-contract",
    "escrow-contract"
]

resolver = "2"

[workspace.dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
borsh = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
schemars = "0.8"